SERVER-53199 Auto retry on TTE in ShardingCatalogManager::withTxn().

Also adds a "failLocalClients" option to the failCommand failpoint.