jstests/sharding/refine_collection_shard_key_atomic.js
@@ -127,7 +127,7 @@ assert.eq({a: MaxKey, b: MaxKey, c: MaxKey, d: MaxKey}, newTagsArr[1].max);
 
 assert.commandWorked(mongos.getDB(kDbName).dropDatabase());
 
-jsTestLog('********** TEST TRANSACTION FAILS **********');
+jsTestLog('********** TEST TRANSACTION AUTOMATICALLY RETRIES **********');
 
 assert.commandWorked(mongos.adminCommand({enableSharding: kDbName}));
 assert.commandWorked(mongos.adminCommand({shardCollection: kNsName, key: oldKeyDoc}));
@@ -143,15 +143,14 @@ assert.eq(oldKeyDoc, oldCollArr[0].key);
 let hangBeforeUpdatingChunksFailPoint = configureFailPoint(
     st.configRS.getPrimary(), 'hangRefineCollectionShardKeyBeforeUpdatingChunks');
 awaitShellToRefineCollectionShardKey = startParallelShell(() => {
-    assert.commandFailedWithCode(
-        db.adminCommand({refineCollectionShardKey: 'db.foo', key: {a: 1, b: 1, c: 1, d: 1}}),
-        ErrorCodes.WriteConflict);
+    assert.commandWorked(
+        db.adminCommand({refineCollectionShardKey: 'db.foo', key: {a: 1, b: 1, c: 1, d: 1}}));
 }, mongos.port);
 hangBeforeUpdatingChunksFailPoint.wait();
 
 // Manually write to 'config.chunks' to force refineCollectionShardKey to throw a WriteConflict
 // exception.
-assert.writeOK(mongos.getCollection(kConfigChunks).update({ns: kNsName}, {jumbo: true}));
+assert.writeOK(mongos.getCollection(kConfigChunks).update({ns: kNsName}, {$set: {jumbo: true}}));
 
 // Disable failpoint 'hangRefineCollectionShardKeyBeforeUpdatingChunks' and await parallel shell.
 hangBeforeUpdatingChunksFailPoint.off();
@@ -159,7 +158,18 @@ awaitShellToRefineCollectionShardKey();
 
 // Verify that 'config.collections' is as expected after refineCollectionShardKey.
 newCollArr = mongos.getCollection(kConfigCollections).find({_id: kNsName}).toArray();
-assert.sameMembers(oldCollArr, newCollArr);
+assert.eq(1, newCollArr.length);
+assert.eq(newKeyDoc, newCollArr[0].key);
+
+// Verify that 'config.chunks' is as expected after refineCollectionShardKey.
+newChunkArr = mongos.getCollection(kConfigChunks).find({ns: kNsName}).sort({min: 1}).toArray();
+assert.eq(1, newChunkArr.length);
+assert.eq({a: MinKey, b: MinKey, c: MinKey, d: MinKey}, newChunkArr[0].min);
+assert.eq({a: MaxKey, b: MaxKey, c: MaxKey, d: MaxKey}, newChunkArr[0].max);
+
+// Verify that 'config.tags' is as expected after refineCollectionShardKey.
+newTagsArr = mongos.getCollection(kConfigTags).find({ns: kNsName}).sort({min: 1}).toArray();
+assert.eq([], newTagsArr);
 
 st.stop();
 })();
